--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "php": "^5.6 || ^7.0 || ^8.0"
     },
     "require-dev": {
+        "php": "^7.3 || ^8.0",
         "ext-mbstring": "*",
         "laminas/laminas-coding-standard": "~2.3.0",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
